Fixes for scaling on small screens

--- a/docs/styles/index.css
+++ b/docs/styles/index.css
@@ -157,8 +157,8 @@ header h2 {
 
 @media only screen and (max-width: 1000px) {
     body {
-        padding-left: 10vw !important;
-        padding-right: 10vw !important;
+        padding-left: 3vw !important;
+        padding-right: 3vw !important;
     }
 
     section#card aside {
@@ -173,6 +173,10 @@ header h2 {
     section#card *,
     footer * {
         float: none !important;
+    }
+
+    section.entry {
+        width: 85vw;
     }
 
     section.entry a {
@@ -195,5 +199,9 @@ header h2 {
     body {
         padding-left: 10px !important;
         padding-right: 10px !important;
+    }
+
+    section.entry {
+        width: 95vw;
     }
 }
